# sdo-api

./: README.md  excel.py  home.py  main.py  parse.py  pyproject.toml
static/: script.js  style.css
templates/: index.html  script.js  style.css
