[tool.poetry]
name = "sdo-api"
version = "0.1.0"
description = ""
authors = ["sqrtleet <sqrtleet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
lxml = "^4.9.3"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
jinja2 = "^3.1.2"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
